[package]
edition = "2021"
name = "photo-frame"
version = "0.1.0"

[[bin]]
name = "photo-frame"
path = "./src/main.rs"
test = false
doctest = false
bench = false

[dependencies]

defmt = "1.0.1"
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target = { version = "0.6.1", features = ["defmt"] }

esp-bootloader-esp-idf = "0.1.0"
embedded-io = { version = "0.6.1", features = ["defmt-03"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
esp-hal = { version = "=1.0.0-beta.1", features = [
    "defmt",
    "esp32s3",
    "unstable",
    "psram",
] }
esp-wifi = { version = "0.14.1", features = [
    "builtin-scheduler",
    "defmt",
    "esp-alloc",
    "esp32s3",
    "smoltcp",
    "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
    "defmt",
    "medium-ethernet",
    "multicast",
    "proto-dhcpv4",
    "proto-dns",
    "proto-ipv4",
    "socket-dns",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }

esp-alloc = { version = "0.8.0", features = ["defmt", "nightly"] }
static_cell = { version = "2.1.0", features = ["nightly"] }
critical-section = "1.2.0"

esp-hal-embassy = { version = "0.8.1", features = ["defmt", "esp32s3"] }
embassy-net = { version = "0.7.0", features = [
    "defmt",
    "dhcpv4",
    "medium-ethernet",
    "tcp",
    "udp",
    "dns",
] }
embassy-executor = { version = "0.7.0", features = [
    "defmt",
    "task-arena-size-20480",
] }
embassy-time = { version = "0.4.0", features = ["defmt"] }

smart-leds = { version = "*" }
smart-leds-trait = { version = "*" }

reqwless = { version = "0.13.0", features = ["defmt"] }
serde = { version = "1.0.203", default-features = false, features = ["derive"] }
serde-json-core = "0.5.1"

[profile.dev.package.esp-wifi]
opt-level = 3

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
